<resources>
    <string name="app_name">Argus</string>
    <string name="send">Envoyer</string>
    <string name="tab_text">Texte</string>
    <string name="tab_pictures">Images</string>
    <string name="tab_settings">Paramètres</string>
    <string name="tab_settings_change_resolution">Changer de résolution</string>
    <string name="tab_settings_set_connexion">Connexion</string>
    <string name="tab_settings_set_server">Serveur (DEBUG)</string>
    <string name="tab_text_type_text_here">Veuillez taper votre texte ci-dessous :</string>
    <string name="tab_text_type_text_here_hint">Tapez votre texte ici</string>
    <string name="tab_text_type_select_text_color">Couleur texte</string>
    <string name="tab_text_type_select_background_color">Couleur fond</string>
    <string name="tab_text_type_select_color_title">Choisissez une couleur</string>
    <string name="tab_text_type_text_font_size">Taille de la police en pixels</string>
    <string name="tab_text_type_text_font_size_minus">-</string>
    <string name="tab_text_type_text_font_size_plus">+</string>
    <string name="colorpicker_dialog_cancel">Annuler</string>
    <string name="tab_pictures_select_picture">Veuillez sélectionner votre image ci-dessous :</string>
    <string name="tab_pictures_select_picture_button">Choisir une image</string>
    <string name="tab_settings_type_parameter">Veuillez saisir un paramètre :</string>
    <string name="tab_settings_type_px_width">Nombre de pixels horizontaux</string>
    <string name="tab_settings_type_px_height">Nombre de pixels verticaux</string>
    <string name="tab_settings_update">Appliquer</string>
    <string name="tab_settings_success">Paramètres mis à jour avec succès</string>
    <string name="tab_settings_no_empty_error">Champ(s) vide(s) interdit(s) !</string>
    <string name="settings_height_width_positive_only_error">La hauteur et la largeur doivent être supérieures à zéro</string>
    <string name="bluetooth_not_supported">Accès au bluetooth nécessaire</string>
    <string name="ble_not_supported">Accès au bluetooth nécessaire</string>
    <string name="location_not_supported">Accès à la localisation néscéssaire</string>
    <string name="get_bonded_devices">Afficher les périphérique précédemment appairés</string>
    <string name="search_bluetooth_devices">Rechercher des périphériques</string>
    <string name="discovery_success">Découverte lancée</string>
    <string name="discovery_failed">Découverte échouée</string>
    <string name="device_detected">Périphérique détecté</string>
    <string name="select_bluetooth_mode">Mode bluetooth (Client/Server)</string>
    <string name="start_server">Démarrer serveur</string>
    <string name="stop_server">Arrêter serveur</string>
    <string name="connect_to_server">Se connecter au serveur</string>
    <string name="disconnect_from_server">Se déconnecter</string>
    <string name="loading_to_connect">Connexion en cours ...</string>
    <string name="connected">Votre appareil est déjà connecté</string>
    <string name="abort_connexion">Interrompre la connexion</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="tab_settings_type_bits_color">Nombre de bits par composante RGB</string>
    <string name="tab_settings_change_color_bits">Bits par composante (RGB)</string>
</resources>
