<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="clientFragment"
    tools:context=".ui.client.ClientFragment">

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/send"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        />
    <Button
        android:layout_below="@+id/send"
        android:id="@+id/connect_to_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/connect_to_server" />

    <Button
        android:id="@+id/disconnect_from_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_to_server"
        android:layout_centerHorizontal="true"
        android:text="@string/disconnect_from_server" />

    <Button
        android:id="@+id/get_bonded_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/disconnect_from_server"
        android:layout_centerHorizontal="true"
        android:text="@string/get_bonded_devices" />

    <Button
        android:id="@+id/search_bluetooth_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_bonded_devices"
        android:layout_centerHorizontal="true"
        android:text="@string/search_bluetooth_devices" />

    <ListView
        android:id="@+id/bonded_device_names_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bluetooth_devices"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/detected_device_names_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bonded_device_names_list"
        android:layout_centerHorizontal="true" />

</RelativeLayout>