<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/appbar_padding"
            >
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/appbar_padding"
                android:text="@string/tab_settings_type_parameter" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_marginBottom="@dimen/appbar_padding"
                android:text="@string/tab_settings_type_bits_color" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:ems="10"
                android:inputType="number"
                android:layout_marginBottom="@dimen/appbar_padding"
                />

            <TextView
                android:id="@+id/textViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextNumber"
                android:visibility="gone"
                android:textAlignment="center"
                android:background="@color/red"
                android:textColor="@color/white"
                android:padding="@dimen/appbar_padding"
                android:layout_centerHorizontal="true"
                android:text="" />

            <TextView
                android:id="@+id/textViewSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextNumber"
                android:visibility="gone"
                android:background="@color/green"
                android:textColor="@color/white"
                android:padding="@dimen/appbar_padding"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_settings_success" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>